<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imagen_articulo_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/vacio"
        android:src="@drawable/icono_articulos_item" />

    <TextView
        android:id="@+id/txtCodArticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imagen_articulo_item"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/imagen_articulo_item"
        android:text="@string/filler"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmbunidad"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/btnCancelarAgregar"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDescArticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imagen_articulo_item"
        android:layout_below="@+id/imagen_articulo_item"
        android:text="@string/filler"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtCantidadDlg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescArticulo"
        android:layout_toRightOf="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/cmbunidad"
        android:layout_width="213dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/edtCantidadDlg"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtCantidadDlg"
        android:layout_alignTop="@+id/edtCantidadDlg"
        android:layout_alignLeft="@+id/txtDescArticulo"
        android:text="@string/cantidad"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>