<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <TextView
            android:id="@+id/txtResumenDelInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/resumen_del_inventario"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtResumenDelInventario"
            android:layout_below="@+id/txtResumenDelInventario"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:lines="2"
            android:text="@string/filler"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/vacio"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/txtCodProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtCodProducto"
            android:layout_alignBottom="@+id/edtCodProducto"
            android:layout_alignLeft="@+id/txtCliente"
            android:text="@string/cod_prod"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edtCodProducto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/txtResumenDelInventario"
            android:layout_toRightOf="@+id/txtCodProducto"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/cod_prod_minusculas"
            android:lines="1"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/imgBtnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/imageView1"
            android:contentDescription="@string/vacio"
            android:src="@drawable/cod_barras" />

        <ImageButton
            android:id="@+id/imgBtnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/imgBtnScan"
            android:contentDescription="@string/vacio"
            android:src="@drawable/buscar" />

        <ImageButton
            android:id="@+id/imgBtnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/imgBtnBuscar"
            android:contentDescription="@string/vacio"
            android:src="@drawable/ok" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000" >

        <TextView
            android:id="@+id/txtDescCantidad"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/txtDescUnitario"
            android:gravity="right"
            android:text="@string/filler"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />







    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.05"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lstCargaInventario"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

        </ListView>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000" >


        <TextView
            android:id="@+id/txtCantidadItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/cantidad_de_items"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/txtImporteInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="12dp"
            android:gravity="right"
            android:text="@string/importe_total_pedido"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />


    </RelativeLayout>


</LinearLayout>